test/features/errors/parser/e0016_expected_item.spl
# E0016: Expected Item

Feature: E0016 - Expected Item
  As a Simple compiler
  I want to detect invalid syntax where items are expected
  So that module-level declarations are valid

  Background:
    Given I have the Simple compiler

  Scenario: Expression at module level
    When I compile:
      '''
      42 + 10  # Error: expression at module level
      '''
    Then I should see error E0016 at line 1
    And the error message should be "expected item, found {found}"
    And the label should indicate "expected item here"
    And the help should suggest "items include functions, structs, traits, impls, and constants"

  Scenario: Bare statement at module level
    When I compile:
      '''
      val x = 10
      print(x)  # Error: statement at module level
      '''
    Then I should see error E0016 at line 2
    And the error should point to the statement

  Scenario: Missing function body
    When I compile:
      '''
      fn incomplete():
      # Missing body - next item appears
      fn another():
        # body
      '''
    Then I should see error E0016
    And the error should indicate expected item or statement

  Scenario: Invalid token at module level
    When I compile:
      '''
      fn valid():
        # body

      }  # Error: unexpected closing brace
      '''
    Then I should see error E0016
    And the error should point to the invalid token

  Scenario: Valid function item
    When I compile:
      '''
      fn add(a: i32, b: i32) -> i32:
        a + b
      '''
    Then compilation should succeed

  Scenario: Valid struct item
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32
      '''
    Then compilation should succeed

  Scenario: Valid trait item
    When I compile:
      '''
      trait Display:
        fn show(self) -> str
      '''
    Then compilation should succeed

  Scenario: Valid impl block
    When I compile:
      '''
      struct Counter:
        count: i32

      impl Counter:
        fn new() -> Counter:
          Counter(0)
      '''
    Then compilation should succeed

  Scenario: Valid constant item
    When I compile:
      '''
      val PI: f64 = 3.14159
      val MAX_SIZE: i32 = 1000
      '''
    Then compilation should succeed

  Scenario: Valid module with multiple items
    When I compile:
      '''
      struct Data:
        value: i32

      fn process(d: Data) -> i32:
        d.value * 2

      val DEFAULT_DATA = Data(42)
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      42 + 10
      '''
    Then I should see error E0016
    And the error message should contain "아이템이 예상되었지만"
